--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "nodemon": "^2.0.15"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.12.5",
+    "sequelize-cli": "^6.3.0"
   }
 }
