--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "sequelize": "^6.12.5",
     "sequelize-cli": "^6.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "uuid-token-generator": "^1.0.0"
   }
 }
